Corrijo y agrego turismoapp como carpeta normal